- added car class - added unit tests - added reservation
